Closed Bug 1264142 Opened 8 years ago Closed 8 years ago

Compositing garbage in the margins of a video

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla48
Tracking Status
firefox48 --- verified

People

(Reporter: mstange, Assigned: sotaro)

References

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

Attached file testcase
STR:
 1. Load the testcase and wait for the video to load.
 2. Scroll up and down.

You'll see repeating borders and other garbage being composited around the video.

Looks like the video ImageLayer covers the whole <video> bounds and not just the part where the video will actually show.
Assignee: nobody → sotaro.ikeda.g
Attachment #8740769 - Flags: review?(matt.woodrow)
Attachment #8740769 - Flags: review?(matt.woodrow) → review+
Comment on attachment 8740769 [details] [diff] [review]
patch - Add ImageLayerComposite::GetFullyRenderedRegion()

Review of attachment 8740769 [details] [diff] [review]:
-----------------------------------------------------------------

::: gfx/layers/composite/ImageLayerComposite.cpp
@@ +177,5 @@
> +  }
> +
> +  if (mScaleMode == ScaleMode::STRETCH) {
> +    nsIntRegion shadowVisibleRegion = GetShadowVisibleRegion().ToUnknownRegion();
> +    shadowVisibleRegion.And(shadowVisibleRegion, nsIntRegion(gfx::IntRect(0, 0, mScaleToSize.width, mScaleToSize.height)));

You can avoid a copy by doing:
nsIntRegion shadowVisibleRegion;
shadowVisibleRegion.And(GetShadowVisibleRegion().ToUnknownRegion(), nsIntRegion(gfx::IntRect(0, 0, mScaleToSize.width, mScaleToSize.height)));
Thanks. I am going to update the patch.
Apply the comment. Carry "r=mattwoodrow".
Attachment #8740769 - Attachment is obsolete: true
Attachment #8740784 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/14d19fb83d3a
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
QA Whiteboard: [good first verify]
I have reproduced this bug with Firefox nightly 48.0a1(build id:20160412030235)on
windows 7(64 bit)

Verified this bug as fixed with Firefox beta 48.0b3(build id:20160623122823)
User Agent:Mozilla/5.0 (Windows NT 6.1; WOW64; rv:48.0) Gecko/20100101 Firefox/48.0

Verified as fixed with Firefox aurora 49.0a2(build id:20160723004004)
User Agent:Mozilla/5.0 (Windows NT 6.1; WOW64; rv:49.0) Gecko/20100101 Firefox/49.0

[testday-20160722]
Reproduced this issue in firefox aurora 48.0a1 (2016-04-12) with ubuntu 16.04 (64 bit)

Verified as this issue fixed with latest firefox beta 48.0b9 (Build ID: 20160718142219)
Mozilla/5.0 (X11; Linux x86_64; rv:48.0) Gecko/20100101 Firefox/48.0

As it is also verified on windows (Comment 9), Marking it as verified!
Status: RESOLVED → VERIFIED
QA Whiteboard: [good first verify] → [good first verify] [testday-20160722]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: