Bug 1264142 - Add ImageLayerComposite::GetFullyRenderedRegion() r=mattwoodrow